新增砀山战首页

--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>杂货铺</title>
+    <link rel="stylesheet" type="text/css" href="//cdn.bootcss.com/bootswatch/3.3.7/cerulean/bootstrap.min.css">
+    <style>
+      *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      html,
+      body{
+        min-height: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <!--<script>
+    var h = document.getElementById('app').clientHeight;
+    document.getElementById('app').style.height = h - 40 + 'px';
+  </script>-->
 </html>
