--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="renderer" content="webkit">
+    <!--<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">-->
+    <meta name="viewport">
     <title>杂货铺</title>
     <link rel="stylesheet" type="text/css" href="//cdn.bootcss.com/bootswatch/3.3.7/cerulean/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_zmmr1pj4fwpqr529.css">
     <style>
       *{
         margin: 0;
@@ -12,16 +17,12 @@
       }
       html,
       body{
-        min-height: 100%;
+        height: 100%;
       }
     </style>
   </head>
-  <body>
+  <body style="min-width: 1200px;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
-  <!--<script>
-    var h = document.getElementById('app').clientHeight;
-    document.getElementById('app').style.height = h - 40 + 'px';
-  </script>-->
 </html>
