--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>杂货铺</title>
+    <link href="favicon.ico" rel="bookmark" type="image/x-icon" /> 
+    <link href="favicon.ico" rel="icon" type="image/x-icon" /> 
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" /> 
   </head>
   <body>
     <div id="app"></div>
